# JMedia

./: .gitignore  README.md
java/: build.gradle  settings.gradle
java/src/main/java/com/codingdie/util/media/: ImageInfo.java  MediaUtil.java  VideoInfo.java
media/: CMakeLists.txt
media/src/: MediaUtil.c  MediaUtil.h  com_codingdie_util_media_MediaUtil.cpp  com_codingdie_util_media_MediaUtil.h  main.c
